# rs-simple-rest-rocket-diese

./: .env  Cargo.toml
migrations/2022-01-17-192810_create_books/: up.sql
migrations/2022-01-17-192817_create_people/: up.sql
src/: config.rs  db.rs  main.rs  schema.rs
src/books/: models.rs
src/people/: models.rs
src/routes/: books_routes.rs  catch_routes.rs  mod.rs  people_routes.rs
